--- a/index.html
+++ b/index.html
@@ -7,7 +7,45 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body class="quicksand-font">
-    <header></header>
+    <header class="header">
+      <nav class="nav-bar display-flex">
+        <div class="title display-flex">
+          <img src="assets/logo.png" alt="website logo" />
+          <h4 class="nav-title">School</h4>
+        </div>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+        <label for="menu-toggle" class="hamburger">&#9776;</label>
+        <div class="pages">
+          <ul class="display-flex nav-links">
+            <li><a href="" class="page-style-1 text-color-pri">Home</a></li>
+            <li><a href="" class="page-style-2 text-color-sec">About</a></li>
+            <li><a href="" class="page-style-3">Facilities</a></li>
+            <li><a href="" class="page-style-4">Admission</a></li>
+          </ul>
+        </div>
+        <div class="">
+          <button class="header-btn">Contact</button>
+        </div>
+      </nav>
+      <hr class="separator" />
+      <div class="banner display-flex">
+        <div class="banner-content">
+          <h2 class="banner-title">
+            <span class="text-color-pri">Empowering <br /></span> students from
+            small<br />
+            age <span class="text-color-sec">towards vision</span>
+          </h2>
+          <p class="banner-description">
+            With the courage, Confidence, Creativity and Compassion to make
+            their Unique Contribution in a Diverse and Dynamic World.
+          </p>
+          <button class="banner-btn">Enroll Now</button>
+        </div>
+        <div>
+          <img class="banner-image" src="assets/hero-kids.png" alt="" />
+        </div>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
