--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
           <img class="banner-image" src="assets/hero-kids.png" alt="" />
         </div>
       </div>
+      <div class="marquee">
+        <marquee behavior="scroll" direction="left">
+          🎉 Welcome to Kids Education! Enroll now for the 2023-2024 academic
+          year. 🎉
+        </marquee>
+      </div>
     </header>
     <main>
       <section class="curriculum">
@@ -135,10 +141,54 @@
           </div>
         </div>
         <div class="story-b">
-          <button class="banner-btn">ViewAll</button>
+          <button class="new-btn">ViewAll</button>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-section about">
+          <div class="icon-and-title">
+            <img
+              src="assets/logo.png"
+              alt="Kids Education Icon"
+              class="footer-icon"
+            />
+            <h3>Kids Education</h3>
+          </div>
+          <p>
+            At Kids Education, we are dedicated to nurturing young minds and
+            fostering a love for learning. Our mission is to provide a safe,
+            inclusive, and stimulating environment where children can explore
+            their potential, develop critical thinking skills, and grow into
+            confident, compassionate individuals. With a focus on holistic
+            development, we offer a well-rounded curriculum that combines
+            academic excellence with creative and physical activities. Our
+            experienced educators are committed to inspiring students to become
+            lifelong learners and responsible global citizens.
+          </p>
+        </div>
+
+        <div class="footer-section links">
+          <h3>About School</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Facilities</a></li>
+            <li><a href="#">Admission</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section social">
+          <h3>Keep In Touch</h3>
+          <div class="social-icons">
+            <a href="#"><img src="assets/fb.png" alt="Facebook" /></a>
+            <a href="#"><img src="assets/twitter.png" alt="Twitter" /></a>
+            <a href="#"><img src="assets/dribble.png" alt="Dribbble" /></a>
+            <a href="#"><img src="assets/google+.png" alt="Google Plus" /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
