--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kid-School-Main</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/5c445f545c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="quicksand-font">
     <header class="header">
@@ -100,8 +104,12 @@
           </div>
         </div>
         <div class="curriculum-balls">
-          <div class="curriculum-ball ball-1"></div>
-          <div class="curriculum-ball ball-2"></div>
+          <div class="curriculum-ball ball-1">
+            <i class="fa-solid fa-arrow-left"></i>
+          </div>
+          <div class="curriculum-ball ball-2">
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
         </div>
       </section>
       <section class="story">
